--- a/IOT_Project.ipynb
+++ b/IOT_Project.ipynb
@@ -684,7 +684,7 @@
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline\n",
         "plt.style.use('fivethirtyeight')\n",
-        "# Above is a special style template for matplotlib, highly useful for visualizing time series data\n",
+        "\n",
         "\n",
         "#setting figure size\n",
         "from matplotlib.pylab import rcParams\n",
@@ -1110,7 +1110,7 @@
       ],
       "source": [
         "# dataset file path\n",
-        "file_path = '/content/drive/MyDrive/IOT Project/Tarp_10000.csv'\n",
+        "file_path = 'Tarp_10000.csv'\n",
         "# Laod from the dataset\n",
         "names = ['Soil Moisture', 'Temperature', ' Soil Humidity', 'Time',\n",
         "         'Air temperature (C)', 'Wind speed (Km/h)', 'Air humidity (%)',\n",
@@ -1652,6 +1652,7 @@
         }
       ],
       "source": [
+        "# Description of the dataset\n",
         "data = irrigation_df\n",
         "stats_df = data.describe()\n",
         "stats_df.loc['range'] = stats_df.loc['max'] - stats_df.loc['min']\n",
@@ -2134,17 +2135,12 @@
         "# Convert imputed data back to DataFrame\n",
         "X_train_imputed = pd.DataFrame(X_train_imputed, columns=features_with_missing)\n",
         "\n",
-        "# ... (Evaluate performance with and without imputation, using y_train and y_test)\n",
-        "\n",
         "# If imputation is effective, impute on the entire dataset\n",
         "X_imputed = imputer.transform(X)\n",
         "X_imputed = pd.DataFrame(X_imputed, columns=features_with_missing)\n",
         "\n",
         "# Combine imputed features with the target feature\n",
-        "data_imputed = pd.concat([X_imputed, y], axis=1)\n",
-        "\n",
-        "# Save the new dataset\n",
-        "# data_imputed.to_excel(\"Tarp_10000_imputed.xlsx\", index=False)"
+        "data_imputed = pd.concat([X_imputed, y], axis=1)"
       ]
     },
     {
@@ -2177,6 +2173,7 @@
         }
       ],
       "source": [
+        "# Still Checking for NaN values\n",
         "check_for_nan = data_imputed.isnull().values.any()\n",
         "sum_nan = data_imputed.isnull().sum().sum()\n",
         "sum_nan_col = data_imputed.isnull().sum()\n",
@@ -2812,6 +2809,26 @@
         "    plt.show()\n",
         "calc_percentage(ax, data.status)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This shows that are training dataset is somewhat balanced and ready to train"
+      ],
+      "metadata": {
+        "id": "vbAhB7qRHlME"
+      },
+      "id": "vbAhB7qRHlME"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Exploratory Data Analysis"
+      ],
+      "metadata": {
+        "id": "mrxH6gWTHrE6"
+      },
+      "id": "mrxH6gWTHrE6"
     },
     {
       "cell_type": "code",
@@ -9130,8 +9147,6 @@
         }
       ],
       "source": [
-        "\n",
-        "\n",
         "y_pred_class_nn_2 = np.argmax(model_2.predict(X_test_norm), axis=-1)\n",
         "y_pred_prob_nn_2 = model_2.predict(X_test_norm)\n",
         "print('')\n",
